--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-composer.phar
-vendor/
-
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+/headquarters/frontoffice/bundles/
+/headquarters/backoffice/bootstrap.php.cache
+/headquarters/backoffice/storage/cache/*
+/headquarters/backoffice/config/parameters.yml
+/headquarters/backoffice/storage/logs/*
+!/headquarters/backoffice/storage/cache/.gitkeep
+!/headquarters/backoffice/storage/logs/.gitkeep
+/build/
+/headquarters/vendor/*
+!/headquarters/vendor/*.php
+/headquarters/binaries/
+/composer.phar
+/node_modules
