Root, include and templates files

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
-/headquarters/frontoffice/bundles/
-/headquarters/backoffice/bootstrap.php.cache
-/headquarters/backoffice/storage/cache/*
-/headquarters/backoffice/config/parameters.yml
-/headquarters/backoffice/storage/logs/*
-!/headquarters/backoffice/storage/cache/.gitkeep
-!/headquarters/backoffice/storage/logs/.gitkeep
-/build/
-/headquarters/vendor/*
-!/headquarters/vendor/*.php
-/headquarters/binaries/
-/composer.phar
-/node_modules
+headquarters/backoffice/config/parameters.yml
+build/
+headquarters/
+headquarters/vendor/*
+#!headquarters/vendor/**/*.php
+binaries/
+composer.phar
+node_modules/
+.git/
+bin/
+demo/
+tests/
+test/
+Test/
+Tests/
+headquarters/**/*.md
+headquarters/**/*.txt
