--- a/.gitignore
+++ b/.gitignore
@@ -3,20 +3,19 @@ headquarters/**/*.jshintrc
 headquarters/**/*.npmignore
 headquarters/**/*.travis.yml
 headquarters/**/*.editorconfig
-binaries/
+headquarters/binaries/
 composer.phar
 node_modules/
-.git/
-bin/
-demo/
-tests/
-tests.src/
-test/
-docs/
-Test/
-Tests/
+headquarters/**/bin/
+headquarters/**/demo/
+headquarters/**/tests/
+headquarters/**/tests.src/
+headquarters/**/test/
+headquarters/**/docs/
+headquarters/**/Test/
+headquarters/**/Tests/
 headquarters/**/*.md
 headquarters/**/*.txt
-.DS_Store
-*.rst
-example/
+headquarters/**/.DS_Store
+headquarters/**/*.rst
+headquarters/**/example/
