--- a/headquarters/libraries/Rhetina/Bundle/CoreBundle/Resources/config/config.yml
+++ b/headquarters/libraries/Rhetina/Bundle/CoreBundle/Resources/config/config.yml
@@ -1,6 +1,3 @@
-parameters:
-    rhetina.module.registrar.class: Rhetina\Component\Module\ModuleRegistrar
-
 services:
     rhetina.module.registrar:
-        class: %rhetina.module.registrar.class%
+        class: Rhetina\Component\Module\ModuleRegistrar
